--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,9 @@ $bg-colour: white;
 $header-colour: $bg-colour;
 /*VARIABLES*/
 
+html{
+    font-family: 'Fira Sans Condensed', sans-serif;
+}
 
 body{
     background-color: $bg-colour;
