--- a/css/style.css
+++ b/css/style.css
@@ -45,15 +45,23 @@ nav {
       padding: 1rem; }
 
 h1 {
-  padding-top: 10rem;
+  padding: 10rem 0rem 2.5rem 0rem;
   text-align: center; }
 
 .form {
-  padding: 5rem;
+  margin: 0 auto;
   display: flex;
   align-items: center;
-  flex-direction: column; }
-  .form input {
-    margin: 0.3rem; }
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.05);
+  width: 30%; }
+  .form form {
+    padding: 2rem; }
+  .form .item, .form button {
+    width: 100%;
+    margin-top: 0.5rem; }
+  .form input, .form select {
+    width: 100%;
+    margin: 0.3rem 0.3rem 0.3rem 0rem; }
 
 /*# sourceMappingURL=style.css.map */
