--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,17 +56,29 @@ nav{
 }
 
 h1{
-    padding-top: 10rem;
+    padding: 10rem 0rem 2.5rem 0rem;
     text-align: center;
 }
 
 .form{
-    padding: 5rem;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     flex-direction: column;
+    background-color: rgba(0,0,0,0.05);
+    width: 30%;
+    
+    form{
+        padding: 2rem;
+    }
+    
+    .item, button{
+        width: 100%;
+        margin-top: 0.5rem;
+    }
 
-    input{
-        margin: 0.3rem;
+    input, select{
+        width: 100%;
+        margin: 0.3rem 0.3rem 0.3rem 0rem;
     }
 }
