Adds forms to the other pages

--- a/css/style.css
+++ b/css/style.css
@@ -48,19 +48,19 @@ h1 {
   padding: 10rem 0rem 2.5rem 0rem;
   text-align: center; }
 
-.form {
+.form-login, .form-cadastro, .form-registro {
   margin: 0 auto;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.05);
   width: 30%; }
-  .form form {
+  .form-login form, .form-cadastro form, .form-registro form {
     padding: 2rem; }
-  .form .item, .form button {
+  .form-login .item, .form-login button, .form-login p, .form-cadastro .item, .form-cadastro button, .form-cadastro p, .form-registro .item, .form-registro button, .form-registro p {
     width: 100%;
     margin-top: 0.5rem; }
-  .form input, .form select {
+  .form-login input[type=text], .form-login select, .form-cadastro input[type=text], .form-cadastro select, .form-registro input[type=text], .form-registro select {
     width: 100%;
     margin: 0.3rem 0.3rem 0.3rem 0rem; }
 
