--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,24 +60,23 @@ h1{
     text-align: center;
 }
 
-.form{
+.form-login, .form-cadastro, .form-registro{
     margin: 0 auto;
     display: flex;
     align-items: center;
     flex-direction: column;
     background-color: rgba(0,0,0,0.05);
     width: 30%;
-    
+
     form{
         padding: 2rem;
     }
-    
-    .item, button{
+
+    .item, button, p{
         width: 100%;
         margin-top: 0.5rem;
     }
-
-    input, select{
+    input[type=text], select{
         width: 100%;
         margin: 0.3rem 0.3rem 0.3rem 0rem;
     }
