Adds table to Historico

--- a/css/style.css
+++ b/css/style.css
@@ -67,4 +67,13 @@ h1 {
     width: 100%;
     margin: 0.3rem 0.3rem 0.3rem 0rem; }
 
+.tabelaUsuarios {
+  margin: 0 auto;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.05);
+  width: 80%;
+  padding: 2rem; }
+  .tabelaUsuarios thead th {
+    padding: 1rem; }
+
 /*# sourceMappingURL=style.css.map */
