--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,20 @@ h1 {
     width: 100%;
     margin: 0.3rem 0.3rem 0.3rem 0rem; }
 
+#updateUsers {
+  margin: 0.5rem;
+  position: relative; }
+
 .tabelaUsuarios {
   margin: 0 auto;
   position: relative;
   background-color: rgba(0, 0, 0, 0.05);
   width: 80%;
   padding: 2rem; }
-  .tabelaUsuarios thead th {
-    padding: 1rem; }
+  .tabelaUsuarios th, .tabelaUsuarios td {
+    display: inline-block;
+    padding: 1rem;
+    text-align: center;
+    width: 50%; }
 
 /*# sourceMappingURL=style.css.map */
