--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,6 +43,7 @@ body{
 
 nav{
     height: 5rem;
+    z-index: 5;
     background-color: $header-colour;
     display: flex;
     position: fixed;
@@ -66,6 +67,23 @@ nav{
             padding: 1rem;
         }
     }
+}
+
+.left-button{
+    width: 20vw;
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
+}
+
+.center-them{
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+}
+
+.help{
+    margin-left: 2rem;
 }
 
 h1{
@@ -93,11 +111,8 @@ h1{
     }
 }
 
-.form.usuarios, #updateUsers{
-    margin-left: 10%;
-}
 
-.tabelaUsuarios{
+.tabelaUsuarios, .tabelaHistorico{
     margin: 0 auto;
     position: relative;
     background-color: $transparent-black;
@@ -105,16 +120,37 @@ h1{
     margin-top: 2.5rem;
     padding: 2rem;
     margin-bottom: 2rem;
-
+    text-align: center;
     th, td{
         display: inline-block;
         padding: 1rem;
         text-align: center;
-        width: 50%;
     }
 
 }
 
-.locais{
+.tabelaUsuarios {
+    th, td{
+        width: 50%;
+    }
+}
+
+.tabelaHistorico {
+    th, td{
+        width: 20%;
+    }
+}
+
+.locais, #novo-veiculo-toggle, .veiculos, .setores, .saveReg{
     display: none;
+}
+
+#pieChartVisitas{
+    min-width: 50vw;
+    height: 100vh;
+    max-width: 100vw;
+    margin: 0 auto;
+    margin-top: 6rem;
+    position: relative;
+    
 }
