--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,6 +39,11 @@ html {
 
 body{
     background-color: $bg-colour;
+    
+}
+
+::-webkit-scrollbar{
+    display: none;
 }
 
 nav{
@@ -137,7 +142,7 @@ h1{
 
 .tabelaHistorico {
     th, td{
-        width: 20%;
+        width: 16.65%;
     }
 }
 
@@ -145,12 +150,14 @@ h1{
     display: none;
 }
 
-#pieChartVisitas{
-    min-width: 50vw;
-    height: 100vh;
-    max-width: 100vw;
+#pieChartVisitas, #lineChartVisitasHora{
+    min-width: 100vw;
+    height: 70vh;
     margin: 0 auto;
-    margin-top: 6rem;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
     position: relative;
-    
+    .highcharts-credits{
+        display: none;
+    }
 }
