--- a/frontEnd/scss/style.scss
+++ b/frontEnd/scss/style.scss
@@ -147,7 +147,7 @@ h1{
 }
 
 .locais, #novo-veiculo-toggle, .veiculos, .setores, .saveReg{
-    display: none;
+    display: block;
 }
 
 #pieChartVisitas, #lineChartVisitasHora{
