--- a/frontEnd/scss/style.scss
+++ b/frontEnd/scss/style.scss
@@ -146,8 +146,12 @@ h1{
     }
 }
 
-.locais, #novo-veiculo-toggle, .veiculos, .setores, .saveReg{
-    display: block;
+.nome, .veiculos, .setores, .saveReg{
+    display: none;
+}
+
+.locais, #novo-veiculo-toggle{
+    display: none;
 }
 
 #pieChartVisitas, #lineChartVisitasHora{
