--- a/frontEnd/scss/style.scss
+++ b/frontEnd/scss/style.scss
@@ -146,11 +146,11 @@ h1{
     }
 }
 
-.nome, .veiculos, .setores, .saveReg{
+.nome, .veiculos, #predios, #tituloSetor, .saveReg{
     display: none;
 }
 
-.locais, #novo-veiculo-toggle{
+.locais, #novo-veiculo-toggle, #registrarVisita{
     display: none;
 }
 
